--- a/index.html
+++ b/index.html
@@ -589,12 +589,12 @@
                     <div class="col-xl-5 col-lg-8 col-md-10">
                         <div class="categories__title-wrap text-center text-xl-start">
                             <div class="section__title">
-                                <span class="sub-title">Unique online courses</span>
-                                <h2 class="title tg-svg">Browse By <span class="position-relative"><span class="svg-icon" id="svg-5" data-svg-icon="assets/img/icons/title_shape.svg"></span>Categories</span></h2>
+                                <span class="sub-title">Des formations adaptées à vos besoins</span>
+                                <h2 class="title tg-svg">Explorez par <span class="position-relative"><span class="svg-icon" id="svg-5" data-svg-icon="assets/img/icons/title_shape.svg"></span>Catégorie</span></h2>
                             </div>
-                            <p>Borem ipsum dolor sit amet, consectetur adipiscing eliawe awut elit ellus, luctus nec ullamcorper mattisBorem ipsum dolor awes atnse awctetur.</p>
+                            <p>Découvrez nos formations spécialisées dans les matières scientifiques et la préparation aux concours d'admission. Des contenus pédagogiques élaborés par des experts pour maximiser vos chances de réussite.</p>
                             <div class="tg-button-wrap justify-content-center justify-content-xl-start">
-                                <a href="courses.html" class="btn btn-border tg-svg"><span class="text">All Categories</span> <span class="svg-icon" id="svg-6" data-svg-icon="assets/img/icons/btn-arrow.svg"></span></a>
+                                <a href="courses.html" class="btn btn-border tg-svg"><span class="text">Toutes les catégories</span> <span class="svg-icon" id="svg-6" data-svg-icon="assets/img/icons/btn-arrow.svg"></span></a>
                             </div>
                         </div>
                     </div>
@@ -606,18 +606,18 @@
                                 <div class="col">
                                     <div class="categories__item">
                                         <a href="courses.html">
-                                            <i class="flaticon-graphic-design"></i>
-                                            <span class="name">Graphic Design</span>
-                                            <span class="courses">19 Courses</span>
+                                            <i class="flaticon-calculator"></i>
+                                            <span class="name">Mathématiques</span>
+                                            <span class="courses">24 Cours</span>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="categories__item">
                                         <a href="courses.html">
-                                            <i class="flaticon-email-marketing"></i>
-                                            <span class="name">Marketing</span>
-                                            <span class="courses">10 Courses</span>
+                                            <i class="flaticon-atom"></i>
+                                            <span class="name">Physique</span>
+                                            <span class="courses">18 Cours</span>
                                         </a>
                                     </div>
                                 </div>
@@ -626,27 +626,27 @@
                                 <div class="col">
                                     <div class="categories__item">
                                         <a href="courses.html">
-                                            <i class="flaticon-bars"></i>
-                                            <span class="name">Fiance</span>
-                                            <span class="courses">08 Courses</span>
+                                            <i class="flaticon-microscope"></i>
+                                            <span class="name">SVT</span>
+                                            <span class="courses">16 Cours</span>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="categories__item">
                                         <a href="courses.html">
-                                            <i class="flaticon-programming-language"></i>
-                                            <span class="name">Development</span>
-                                            <span class="courses">13 Courses</span>
+                                            <i class="flaticon-graduation-cap"></i>
+                                            <span class="name">Prépa Concours</span>
+                                            <span class="courses">22 Cours</span>
                                         </a>
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="categories__item">
                                         <a href="courses.html">
-                                            <i class="flaticon-atom"></i>
-                                            <span class="name">Science</span>
-                                            <span class="courses">19 Courses</span>
+                                            <i class="flaticon-file"></i>
+                                            <span class="name">Examens Blancs</span>
+                                            <span class="courses">15 Tests</span>
                                         </a>
                                     </div>
                                 </div>
