--- a/index.html
+++ b/index.html
@@ -670,10 +670,10 @@
                         <div class="testimonial__image-wrapper position-relative">
                             <div class="testimonial__image-active">
                                 <div class="testimonial__image-item">
-                                    <img src="assets/img/others/testimonial01.jpg" alt="img">
+                                    <img src="assets/img/others/testimonial01.jpg" alt="témoignage étudiant">
                                 </div>
                                 <div class="testimonial__image-item">
-                                    <img src="assets/img/others/testimonial02.jpg" alt="img">
+                                    <img src="assets/img/others/testimonial02.jpg" alt="témoignage étudiant">
                                 </div>
                             </div>
                             <div class="testimonial__shapes">
@@ -685,28 +685,28 @@
                     </div>
                     <div class="col-lg-7">
                         <div class="testimonial__content-wrapper">
-                            <div class="section__title white-title mb-40">
-                                <h2 class="title tg-svg">What Our <span class="position-relative"><span class="svg-icon" id="svg-7" data-svg-icon="assets/img/icons/title_shape.svg"></span>Students</span><br> Say About Us</h2>
+                            <div class="section__title mb-40" style="color: #000;">
+                                <h2 class="title tg-svg" style="color: #000;">Ce que nos <span class="position-relative"><span class="svg-icon" id="svg-7" data-svg-icon="assets/img/icons/title_shape.svg"></span>étudiants</span><br> disent de nous</h2>
                             </div>
                             <div class="testimonial__content-active">
                                 <div class="testimonial__content-item">
                                     <div class="testimonial__content-icon">
-                                        <img src="assets/img/icons/quote.png" alt="img">
+                                        <img src="assets/img/icons/quote.png" alt="citation">
                                     </div>
-                                    <p>“ when an unknown printer took a galley of type and scrambled to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.”</p>
+                                    <p style="color: #000; font-weight: 500;">"Grâce à Apprentissage Academy, j'ai pu me préparer efficacement à mon concours d'entrée à l'école d'ingénieur. Les cours étaient bien structurés et les examens blancs m'ont permis de me familiariser avec le format des épreuves. J'ai été admis dans mon école de premier choix!"</p>
                                     <div class="testimonial__content-avatar">
-                                        <h5 class="name">Parker Robert</h5>
-                                        <span class="designation">UI Designer</span>
+                                        <h5 class="name" style="color: #000;">Ahmed Benali</h5>
+                                        <span class="designation" style="color: #222;">Étudiant en école d'ingénieur</span>
                                     </div>
                                 </div>
                                 <div class="testimonial__content-item">
                                     <div class="testimonial__content-icon">
-                                        <img src="assets/img/icons/quote.png" alt="img">
+                                        <img src="assets/img/icons/quote.png" alt="citation">
                                     </div>
-                                    <p>“ when an unknown printer took a galley of type and scrambled to make a type specimen book. It has survived not only five centuries, but also the leap into electronic.”</p>
+                                    <p style="color: #000; font-weight: 500;">"Le suivi personnalisé et les méthodes d'apprentissage proposées par Apprentissage Academy m'ont donné confiance pour passer mon baccalauréat. Les professeurs sont très compétents et disponibles pour répondre à toutes les questions. J'ai obtenu une mention très bien!"</p>
                                     <div class="testimonial__content-avatar">
-                                        <h5 class="name">Parker Robert</h5>
-                                        <span class="designation">UI Designer</span>
+                                        <h5 class="name" style="color: #000;">Salma Khatib</h5>
+                                        <span class="designation" style="color: #222;">Bachelière avec mention</span>
                                     </div>
                                 </div>
                             </div>
