--- a/index.html
+++ b/index.html
@@ -725,13 +725,13 @@
                     <div class="row align-items-center gap-4 gap-md-0">
                         <div class="col-md-8">
                             <div class="section__title text-center text-md-start">
-                                <span class="sub-title">Our Qualified People Matter</span>
-                                <h2 class="title tg-svg">Top <span class="position-relative"><span class="svg-icon" id="svg-8" data-svg-icon="assets/img/icons/title_shape.svg"></span>Class</span> instructor</h2>
+                                <span class="sub-title">Notre équipe pédagogique qualifiée</span>
+                                <h2 class="title tg-svg">Nos <span class="position-relative"><span class="svg-icon" id="svg-8" data-svg-icon="assets/img/icons/title_shape.svg"></span>meilleurs</span> formateurs</h2>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="tg-button-wrap justify-content-center justify-content-md-end">
-                                <a href="https://themeadapt.com/tm/eduvalt/instructor.html" class="btn tg-svg"><span class="text">All Instructors</span> <span class="svg-icon" id="instructor-btn" data-svg-icon="assets/img/icons/btn-arrow.svg"></span></a>
+                                <a href="instructor.html" class="btn tg-svg"><span class="text">Tous nos formateurs</span> <span class="svg-icon" id="instructor-btn" data-svg-icon="assets/img/icons/btn-arrow.svg"></span></a>
                             </div>
                         </div>
                     </div>
@@ -745,8 +745,8 @@
                             </div>
                             <div class="instructor__content">
                                 <div class="left">
-                                    <span class="designation">Graphic Design</span>
-                                    <h4 class="name"><a href="instructor-details.html">Robert Smith</a></h4>
+                                    <span class="designation">Mathématiques</span>
+                                    <h4 class="name"><a href="instructor-details.html">Youssef Idmhand</a></h4>
                                 </div>
                                 <div class="right">
                                     <span class="share"><i class="flaticon-share"></i></span>
@@ -768,8 +768,8 @@
                             </div>
                             <div class="instructor__content">
                                 <div class="left">
-                                    <span class="designation">Web Design</span>
-                                    <h4 class="name"><a href="instructor-details.html">Olivia Mia</a></h4>
+                                    <span class="designation">Physique</span>
+                                    <h4 class="name"><a href="instructor-details.html">Walid Baba</a></h4>
                                 </div>
                                 <div class="right">
                                     <span class="share"><i class="flaticon-share"></i></span>
@@ -791,8 +791,8 @@
                             </div>
                             <div class="instructor__content">
                                 <div class="left">
-                                    <span class="designation">Digital Marketing</span>
-                                    <h4 class="name"><a href="instructor-details.html">William Hope</a></h4>
+                                    <span class="designation">SVT</span>
+                                    <h4 class="name"><a href="instructor-details.html">Fatimazahra</a></h4>
                                 </div>
                                 <div class="right">
                                     <span class="share"><i class="flaticon-share"></i></span>
@@ -814,8 +814,8 @@
                             </div>
                             <div class="instructor__content">
                                 <div class="left">
-                                    <span class="designation">Web Development</span>
-                                    <h4 class="name"><a href="instructor-details.html">Sophia Ava</a></h4>
+                                    <span class="designation">Prépa Concours</span>
+                                    <h4 class="name"><a href="instructor-details.html">Bouchra</a></h4>
                                 </div>
                                 <div class="right">
                                     <span class="share"><i class="flaticon-share"></i></span>
@@ -841,13 +841,13 @@
                     <div class="col-12">
                         <div class="cta__wrapper">
                             <div class="section__title white-title">
-                                <h2 class="title tg-svg">Join us & <span class="position-relative"><span class="svg-icon" id="svg-9" data-svg-icon="assets/img/icons/title_shape.svg"></span>Spread</span> Experiences</h2>
+                                <h2 class="title tg-svg">Rejoignez-nous & <span class="position-relative"><span class="svg-icon" id="svg-9" data-svg-icon="assets/img/icons/title_shape.svg"></span>Réussissez</span> vos examens</h2>
                             </div>
                             <div class="cta__desc">
-                                <p>Borem ipsum dolor sit amet, consectetur adipiscing eliawe awUt elit ellus, luctus nec ullamcorper mattisBorem</p>
+                                <p>Apprentissage Academy vous offre les meilleurs outils et méthodes pour préparer vos examens et concours. Démarrez votre parcours vers l'excellence académique dès aujourd'hui.</p>
                             </div>
                             <div class="tg-button-wrap justify-content-center justify-content-md-end">
-                                <a href="contact.html" class="btn white-btn tg-svg"><span class="text">Become an Instructor</span> <span class="svg-icon" id="cta-btn" data-svg-icon="assets/img/icons/btn-arrow.svg"></span></a>
+                                <a href="contact.html" class="btn white-btn tg-svg"><span class="text">Essai gratuit 7 jours</span> <span class="svg-icon" id="cta-btn" data-svg-icon="assets/img/icons/btn-arrow.svg"></span></a>
                             </div>
                             <img class="object" src="assets/img/objects/cta_shape01.svg" style="left: 25px; top: -35px;" alt="Object" data-aos="fade-down" data-aos-delay="400">
                             <img class="object" src="assets/img/objects/cta_shape02.svg" style="right: -20px; bottom: -80px;" alt="Object" data-aos="fade-up" data-aos-delay="400">
